--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
+
 {
-  "name": "ai回复转长图",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "ai-snippet-sharer",
+  "version": "1.0.0",
+  "description": "AI回复转长图",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
   },
-  "dependencies": {
-    "lucide-react": "^0.474.0",
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "html-to-image": "^1.11.13",
-    "marked": "^15.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+  "dependencies": {}
 }
